--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,7 @@ body {
 .btn-secondary {
   @apply bg-gray-200 hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 rounded transition-all;
 }
+
+li {
+  padding: 0 1rem;
+}
